--- a/index.html
+++ b/index.html
@@ -102,15 +102,14 @@
 		<tr><th>(Unit Sejenis)</th><td class="force" id="oHeikayari"></td><td class="force" id="oHeikayumi"></td><td class="force" id="oHeikakiba"></td><td class="force" id="oHeikaheiki"></td><td></td></tr>
 	</table>
 </div>
-
-
-<script type="text/javascript"><!--
-var fc2footerparam = 'charset=' + (document.charset ? document.charset : document.characterSet) + '&url=' + document.location + '&service=0&r=' + Math.floor(Math.random()*99999999999);
-var fc2footertag = '<' + 'script src="http://vip.chps-api.fc2.com/apis/footer/?' + fc2footerparam + '" charset="UTF-8"><' + '/script>';
-document.write(fc2footertag);
-//--></script>
-<!-- FC2, inc.-->
-<img src="http://media.fc2.com/counter_img.php?id=50" style="visibility:hidden" alt="inserted by FC2 system" width="0" height="0">
-<!-- FC2, inc.-->
+<script type="text/javascript">
+document.write(unescape('%3Cscript type="text/javascript" src="'+
+document.location.protocol+'//counter.goingup.com/js/tracker.js?st=mibwnuc&amp;b=5"%3E%3C/script%3E'));
+</script>
+<noscript>
+    <a href="http://www.goingup.com" title="free seo tool"><img
+        src="//counter.goingup.com/default.php?st=mibwnuc&amp;b=5"
+        border="0" alt="free seo tool" /></a>
+</noscript>
 </body>
 </html>
